# Vesta

./: .gitignore  INSTALL.md  README.md  main.py  pyproject.toml  run.sh  test_recorded_pipeline.py
person-detect/: README.md  app.py  convert_to_onnx.py  main.py  pyproject.toml
person-detect/templates/: index.html
templates/: index.html
video-understanding/: main-2.py  main-3.py  main.py  pyproject.toml
